
Bug fixes
---------

- Fix `#474`_: The ``morepath.Request.reset`` method does not reset
  the value of ``reg.implicit.lookup``.

- Fix code_examples path for local docs tox test.

.. _#474: https://github.com/morepath/morepath/issues/474


Other
-----

- Use abstract base classes from the standard library for
  ``morepath.IdentityPolicy``.

- Expand the test suite to cover ``morepath.Request.reset`` and loop
  detection for deferred class links. Coverage ratio is now 100%.

- Reorganize the table of contents of the documentation into a
  hierarchy (`#468`_).

.. _#468: https://github.com/morepath/morepath/pull/468


0.15 (2016-07-18)
=================

Removal & Deprecations
----------------------

- **Removed**: ``morepath.autosetup`` and ``morepath.autocommit`` are
  both removed from the Morepath API.

  Use ``autoscan``. Also use new explicit ``App.commit`` method, or
  rely on Morepath automatically committing during the first
  request. So instead of::

    morepath.autosetup()
    morepath.run(App())

  you do::

    morepath.autoscan()
    App.commit()  # optional
    morepath.run(App())

- **Removed**: the ``morepath.security`` module is removed, and you cannot
  import from it anymore. Change imports from it to the public API, so go
  from::

    from morepath.security import NO_IDENTITY

  to::

    from morepath import NO_IDENTITY

- **Deprecated** ``morepath.remember_identity`` and
  ``morepath.forget_identity`` are both deprecated.

  Use the ``morepath.App.remember_identity`` and
  ``morepath.App.forget_identity`` methods, respectively.

  Instead of ::

    remember_identity(response, request, identity, lookup=request.lookup)
    ...
    morepath.forget_identity(response, request, lookup=request.lookup)

  you do::

    request.app.remember_identity(response, request, identity)
    ...
    request.app.forget_identity(response, request)

- **Deprecated** ``morepath.settings`` is deprecated.

  Use the ``morepath.App.settings`` property instead.
