@@ -58,12 +58,15 @@ Other
 - Use abstract base classes from the standard library for
   ``morepath.IdentityPolicy``.
 
-- Expand the test suite to cover ``morepath.Request.reset`` and loop
-  detection for deferred class links. Coverage ratio is now 100%.
+- Expand the test suite to cover ``morepath.Request.reset``, loop
+  detection for deferred class links, dispatching of
+  ``@App.verify_identity``-decorated functions on the ``identity``
+  argument (`#464`_). Coverage ratio is now 100%.
 
 - Reorganize the table of contents of the documentation into a
   hierarchy (`#468`_).
 
+.. _#464: https://github.com/morepath/morepath/issues/464
 .. _#468: https://github.com/morepath/morepath/pull/468
 
 
